--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   "scripts": {
     "prebuild": "tsc -p ./tsconfig.json",
     "build": "webpack",
+    "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christian Gewert <cgewert@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "phaser": "^3.24.1"
+    "phaser": "^3.55.2"
   },
   "devDependencies": {
-    "@types/dat.gui": "^0.7.5",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "@types/dat.gui": "^0.7.7",
+    "@webpack-cli/serve": "^1.5.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "dat.gui": "^0.7.7",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "typescript": "^4.4.3",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   }
 }
