--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "dat.gui": "^0.7.7",
+    "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
