- add node module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    /*"moduleResolution": "Node",*/
+    "moduleResolution": "Node",
     "removeComments": true,
     "sourceMap": true,
     "outDir": "./out",
