--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Christian Gewert <cgewert@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "phaser": "^3.55.2"
+    "phaser": "^3.55.2",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.7",
